adusted gitlab minio pvc size

--- a/gitlab/gitlab-storage.yaml
+++ b/gitlab/gitlab-storage.yaml
@@ -7,4 +7,5 @@ parameters:
   autoPlace: "2"
   storagePool: "ssd"
   resourceGroup: "gitlab-storage"
+allowVolumeExpansion: true
 reclaimPolicy: Retain
