--- a/gitlab/gitlab-storage.yaml
+++ b/gitlab/gitlab-storage.yaml
@@ -8,4 +8,4 @@ parameters:
   storagePool: "ssd"
   resourceGroup: "gitlab-storage"
 allowVolumeExpansion: true
-reclaimPolicy: Retain
+reclaimPolicy: Delete
