--- a/gitlab/values.yaml
+++ b/gitlab/values.yaml
@@ -17,6 +17,10 @@ global:
     # Configure the clone link in the UI to include the high-numbered NodePort
     # value from below (`gitlab.gitlab-shell.service.nodePort`)
     port: 32022
+  pages:
+    enabled: true
+    host: pages.aidengrossman.com
+    accessControl: true
   appConfig:
     dependencyProxy:
         enabled: true
