--- a/theia/package.json
+++ b/theia/package.json
@@ -18,8 +18,15 @@
   "devDependencies": {
     "@theia/cli": "next"
   },
+  "scripts": {
+    "prepare": "yarn run clean && yarn build && yarn run download:plugins",
+    "clean": "theia clean",
+    "build": "theia build --mode development",
+    "start": "theia start --plugins=local-dir:plugins",
+    "download:plugins": "theia download:plugins"
+  },
   "theiaPluginsDir": "plugins",
   "theiaPlugins": {
-      "jupyter": "https://open-vsx.org/api/ms-toolsai/jupyter/2021.11.1001507411/file/ms-toolsai.jupyter-2021.11.1001507411.vsix"
+      "vscode-builtin-extensions-pack": "https://open-vsx.org/api/eclipse-theia/builtin-extension-pack/1.62.3/file/eclipse-theia.builtin-extension-pack-1.62.3.vsix"
   }
 }
