setup metalllb and envoy

--- a/metallb/l2config.yaml
+++ b/metallb/l2config.yaml
@@ -1,5 +1,6 @@
 apiVersion: metallb.io/v1beta1
 kind: L2Advertisement
 metadata:
-  name: l2adv
+  name: l2advertisement
   namespace: metallb-system
+
