--- a/bitwarden/vaultwarden.yaml
+++ b/bitwarden/vaultwarden.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   accessModes:
     - ReadWriteOnce
-  storageClassName: vaultwarden-storage
+  storageClassName: ssd-storage
   resources:
     requests:
       storage: 5Gi
@@ -52,27 +52,27 @@ spec:
     protocol: TCP
   selector:
     app: vaultwarden
----
-apiVersion: networking.k8s.io/v1
-kind: Ingress
-metadata:
-  name: vaultwarden
-  annotations:
-    kuberentes.io/ingress.class: "nginx"
-    cert-manager.io/issuer: "letsencrypt-prod"
-spec:
-  tls:
-  - hosts:
-    - bitwarden.aidengrossman.com
-    secretName: vaultwarden
-  rules:
-  - host: bitwarden.aidengrossman.com
-    http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: vaultwarden
-            port:
-              number: 80
+#---
+#apiVersion: networking.k8s.io/v1
+#kind: Ingress
+#metadata:
+#  name: vaultwarden
+#  annotations:
+#    kuberentes.io/ingress.class: "nginx"
+#    cert-manager.io/issuer: "letsencrypt-prod"
+#spec:
+#  tls:
+#  - hosts:
+#    - bitwarden.aidengrossman.com
+#    secretName: vaultwarden
+#  rules:
+#  - host: bitwarden.aidengrossman.com
+#    http:
+#      paths:
+#      - path: /
+#        pathType: Prefix
+#        backend:
+#          service:
+#            name: vaultwarden
+#            port:
+#              number: 80
