--- a/bitwarden/vaultwarden.yaml
+++ b/bitwarden/vaultwarden.yaml
@@ -1,7 +1,13 @@
 apiVersion: v1
+kind: Namespace
+metadata:
+  name: vaultwarden
+---
+apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: vaultwarden-data
+  namespace: vaultwarden
 spec:
   accessModes:
     - ReadWriteOnce
@@ -14,6 +20,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vaultwarden
+  namespace: vaultwarden
 spec:
   selector:
     matchLabels:
@@ -45,6 +52,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: vaultwarden
+  namespace: vaultwarden
 spec:
   ports:
   - port: 80
@@ -52,27 +60,26 @@ spec:
     protocol: TCP
   selector:
     app: vaultwarden
-#---
-#apiVersion: networking.k8s.io/v1
-#kind: Ingress
-#metadata:
-#  name: vaultwarden
-#  annotations:
-#    kuberentes.io/ingress.class: "nginx"
-#    cert-manager.io/issuer: "letsencrypt-prod"
-#spec:
-#  tls:
-#  - hosts:
-#    - bitwarden.aidengrossman.com
-#    secretName: vaultwarden
-#  rules:
-#  - host: bitwarden.aidengrossman.com
-#    http:
-#      paths:
-#      - path: /
-#        pathType: Prefix
-#        backend:
-#          service:
-#            name: vaultwarden
-#            port:
-#              number: 80
+---
+apiVersion: gateway.networking.k8s.io/v1
+kind: HTTPRoute
+metadata:
+  name: bitwarden-backend
+  namespace: vaultwarden
+spec:
+  parentRefs:
+    - name: envoy-gateway
+      namespace: envoy-gateway-system
+  hostnames:
+    - "bitwarden.aidengrossman.com"
+  rules:
+    - backendRefs:
+        - group: ""
+          kind: Service
+          name: vaultwarden
+          port: 80
+          weight: 1
+      matches:
+        - path:
+            type: PathPrefix
+            value: /
