--- a/envoy/issuer.yaml
+++ b/envoy/issuer.yaml
@@ -13,6 +13,6 @@ spec:
         gatewayHTTPRoute:
           parentRefs:
           - kind: Gateway
-            name: eg
-            namespace: default
+            name: envoy-gateway
+            namespace: envoy-gateway-system
 
