--- a/envoy/gateway.yaml
+++ b/envoy/gateway.yaml
@@ -53,3 +53,20 @@ spec:
               - key: kubernetes.io/metadata.name
                 operator: In
                 values: [jellyfin, envoy-gateway-system]
+    - name: https-jellyfin2
+      protocol: HTTPS
+      hostname: jellyfin.aidengrossman.com
+      port: 443
+      tls:
+        mode: Terminate
+        certificateRefs:
+        - kind: Secret
+          name: jellyfin-eg-https
+      allowedRoutes:
+        namespaces:
+          from: Selector
+          selector:
+            matchExpressions:
+              - key: kubernetes.io/metadata.name
+                operator: In
+                values: [jellyfin, envoy-gateway-system]
